--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 <body>
 	<!------Header Section------>
 	<header>
-		<a href="#" class="logo">Portfolio.</a>
+		<a href="#" class="logo">
+			<img src="/image/logo.png" alt="logo"></a>
 		<ul class="navlist">
 			<li><a href="#home" class="active">Home</a></li>
 			<li><a href="#about">About Me</a></li>
